--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@hapi/joi": "^15.0.1",
 		"activedirectory": "^0.7.2",
 		"async-mutex": "^0.1.4",
+		"axios": "^0.21.0",
 		"deep-rename-keys": "^0.2.1",
 		"filesize.js": "^2.0.0",
 		"hash-files": "^1.1.1",
@@ -45,6 +46,7 @@
 		"xml2js": "^0.4.22"
 	},
 	"devDependencies": {
+		"@types/axios": "^0.14.0",
 		"@types/cors": "^2.8.6",
 		"@types/jquery": "^3.3.31",
 		"@types/json5": "^0.0.30",
